Pantalla de Horarios migrada a MVC de ext4, a falta de representar el calendario
git-svn-id: http://jira.uji.es/repos/uji/HOR/uji-hor-base/trunk@9373 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="http://devel.uji.es/resources/js/extjs-4.1.0/resources/css/ext-all.css">
     <script type="text/javascript" src="http://devel.uji.es/resources/js/extjs-4.1.0/ext-debug.js"></script>
+<!--     <script type="text/javascript" src="extensible-1.5.1/lib/extensible-all-debug.js"></script> -->
     <script type="text/javascript" src="app/Application.js"></script> 
     <style>
       #errChk label { cursor: pointer; }
