--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" type="text/css" href="http://devel.uji.es/resources/js/extjs-4.1.0/resources/css/ext-all.css">
     <link rel="stylesheet" type="text/css" href="/hor/extensible-1.5.1/resources/css/extensible-all.css">   
     <script type="text/javascript" src="http://devel.uji.es/resources/js/extjs-4.1.0/ext-debug.js"></script>
+    <script type="text/javascript" src="http://devel.uji.es/resources/js/extjs-4.1.0/locale/ext-lang-ca.js"></script>
     <script type="text/javascript" src="/hor/extensible-1.5.1/src/Extensible.js"></script>
+    <script type="text/javascript" src="/hor/extensible-1.5.1/src/locale/extensible-lang-ca.js"></script>   
     <script type="text/javascript" src="app/Application.js"></script> 
     <style>
       #errChk label { cursor: pointer; }
