IN PROGRESS - issue HOR-85: ajustar la pantalla de detalle segun mockup http://jira.uji.es/browse/HOR-85
Lógica de la pantalla casi funcional.
Añadido panel de detalle de clases, falta su lógica.

git-svn-id: http://jira.uji.es/repos/uji/HOR/uji-hor-base/trunk@11456 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,8 @@
     <title>Horarios</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="http://devel.uji.es/resources/js/extjs-4.1.0/resources/css/ext-all.css">
-    <link rel="stylesheet" type="text/css" href="/hor/extensible-1.5.1/resources/css/extensible-all.css">   
+    <link rel="stylesheet" type="text/css" href="/hor/extensible-1.5.1/resources/css/extensible-all.css"> 
+    <link rel="stylesheet" type="text/css" href="/hor/css/custom.css"> 
     <script type="text/javascript" src="http://devel.uji.es/resources/js/extjs-4.1.0/ext-debug.js"></script>
     <script type="text/javascript" src="http://devel.uji.es/resources/js/extjs-4.1.0/locale/ext-lang-ca.js"></script>
     <script type="text/javascript" src="/hor/extensible-1.5.1/src/Extensible.js"></script>
