HOR-118: Utilizar las librerías JS y CSS de static.uji.es para el proyecto. http://jira.uji.es/browse/HOR-118
Solucionado.

git-svn-id: http://jira.uji.es/repos/uji/HOR/uji-hor-base/trunk@11662 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,13 +3,13 @@
   <head>
     <title>Horarios</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" type="text/css" href="http://devel.uji.es/resources/js/extjs-4.1.0/resources/css/ext-all.css">
-    <link rel="stylesheet" type="text/css" href="/hor/extensible-1.5.1/resources/css/extensible-all.css"> 
-    <link rel="stylesheet" type="text/css" href="/hor/css/custom.css"> 
-    <script type="text/javascript" src="http://devel.uji.es/resources/js/extjs-4.1.0/ext-debug.js"></script>
-    <script type="text/javascript" src="http://devel.uji.es/resources/js/extjs-4.1.0/locale/ext-lang-ca.js"></script>
-    <script type="text/javascript" src="/hor/extensible-1.5.1/src/Extensible.js"></script>
-    <script type="text/javascript" src="/hor/extensible-1.5.1/src/locale/extensible-lang-ca.js"></script>   
+    <link rel="stylesheet" type="text/css" href="http://static.uji.es/js/extjs/ext-4.1.1/resources/css/ext-all.css">
+    <link rel="stylesheet" type="text/css" href="http://static.uji.es/js/extjs/extensible-1.5.1/resources/css/extensible-all.css"> 
+    <link rel="stylesheet" type="text/css" href="css/custom.css"> 
+    <script type="text/javascript" src="http://static.uji.es/js/extjs/ext-4.1.1/ext.js"></script>
+    <script type="text/javascript" src="http://static.uji.es/js/extjs/locale/ext-lang-ca.js"></script>
+    <script type="text/javascript" src="http://static.uji.es/js/extjs/extensible-1.5.1/src/Extensible.js"></script>
+    <script type="text/javascript" src="http://static.uji.es/js/extjs/extensible-1.5.1/locale/extensible-lang-ca.js"></script>   
     <script type="text/javascript" src="app/Application.js"></script> 
     <style>
       #errChk label { cursor: pointer; }
