--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" type="text/css" href="http://static.uji.es/js/extjs/extensible-1.5.1/resources/css/extensible-all.css"> 
     <link rel="stylesheet" type="text/css" href="css/custom.css"> 
     <script type="text/javascript" src="http://static.uji.es/js/extjs/extjs-4.1.1/ext.js"></script>
-    <script type="text/javascript" src="http://static.uji.es/js/extjs/locale/ext-lang-ca.js"></script>
+    <script type="text/javascript" src="http://static.uji.es/js/extjs/extjs-4.1.1/locale/ext-lang-ca.js"></script>
     <script type="text/javascript" src="http://static.uji.es/js/extjs/extensible-1.5.1/src/Extensible.js"></script>
-    <script type="text/javascript" src="http://static.uji.es/js/extjs/extensible-1.5.1/locale/extensible-lang-ca.js"></script>   
+    <script type="text/javascript" src="http://static.uji.es/js/extjs/extensible-1.5.1/src/locale/extensible-lang-ca.js"></script>   
     <script type="text/javascript" src="app/Application.js"></script> 
     <style>
       #errChk label { cursor: pointer; }
