FINISHED HOR-157 Añadir iconos a los botones del árbol y el grid de asignación de aulas http://jira.uji.es/browse/HOR-157
git-svn-id: http://jira.uji.es/repos/uji/HOR/uji-hor-base/trunk@11863 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="http://static.uji.es/js/extjs/extjs-4.1.1/resources/css/ext-all.css">
     <link rel="stylesheet" type="text/css" href="http://static.uji.es/js/extjs/extensible-1.5.1/resources/css/extensible-all.css"> 
     <link rel="stylesheet" type="text/css" href="css/custom.css"> 
+	<link rel="stylesheet" type="text/css"	href="http://static.uji.es/js/extjs/uji-commons-extjs/css/icons.css" />    
     <script type="text/javascript" src="http://static.uji.es/js/extjs/extjs-4.1.1/ext.js"></script>
     <script type="text/javascript" src="http://static.uji.es/js/extjs/extjs-4.1.1/locale/ext-lang-ca.js"></script>
     <script type="text/javascript" src="http://static.uji.es/js/extjs/extensible-1.5.1/src/Extensible.js"></script>
